# qbcli

./: Cargo.toml  README.md  build.sh
.cargo/: config.toml
src/: main.rs  req.rs  table.rs
