[package]
name = "qbcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.11.10", features = ["blocking","json", "serde_json"] }
clap = { version = "3.1.18", features = ["cargo"] }
nipper = "0.1.9"
anyhow = "1.0.57"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["full"]}
prettytable-rs = "0.8.0"