[package]
name = "qbcli"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "Social Work Library CLI"
readme = "README.md"
repository = "https://github.com/gngpp/qbcli"
keywords = ["cli", "query"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "3.1.18", features = ["cargo"] }
anyhow = "1.0.57"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
prettytable-rs = "0.8.0"